improving usage documentation

--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -455,10 +455,12 @@ function vpw(w,x) { return (x); }
     <h2> How to Best  Contribute </h2>
   <p>
     <a href="https://pubinv.github.io/PubInv/">Public Invention</a> is a non-profit promoting the idea of "Inventing in the public, for the public." We are always seeking volunteer Public Inventors and Invention Coaches.
-    Additionally, we always need web designers, artists, programmers and writers, and this project is no exception, although it is at a stable point for what it is.
+  Additionally, we always need web designers, artists, programmers and writers, and this project is no exception, although it is at a stable point for what it is.
+  For example, to make this more easily reusable the color and text configuration should be controlled by CSS.
     </p>
     <p>
   This project is contributing JavaScript and math which makes implementing a TriadBalance diagram easy for a JavaScript programmer.
+  However, the 200 lines of code needed to implement the math could easily be translated to some other language.
   Additional work would be needed to make a TriadBalance as easy to use by lightly skilled front-end programmers as, for example, a Bootstrap slider.
   To make an easily reusable GUI component requires configuration and design skill. I would love to have somebody take this 
 code and make a <a href="https://d3js.org/"> d3</a> or <a href="https://reactjs.org/">React</a> component out of it, so that it could be enjoyed by others as a plug-in as easy using another d3 GUI element, for example.
