Update test function argument.

--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -477,7 +477,7 @@ that would have to be included to build an interactive diagram.
     <code class="language-js">invertTriadBalance2to3 </code>, but a number of
     test functions. Since these functions make the most sense in a browser,
     we normally invoke them from within a browser rather than with Mocha or something.
-    The function <code class="language-js">testAllTriadBalance(wtc)</code>
+    The function <code class="language-js">testAllTriadBalance(WORLD_TRIANGLE_COORDS)</code>
     can be easily invoked from a browser.
     </p>
     
