Minor wording change.

--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -474,7 +474,7 @@ that would have to be included to build an interactive diagram.
   <p>
     The file <a href="./TriadBalance.js">TriadBalance.js</a> contains not only the
     function <code class="language-js">TriadBalance2to3</code> and its inverse
-    <code class="language-js">invertTriadBalance2to3 </code>, but a number of
+    <code class="language-js">invertTriadBalance2to3</code>, but also a number of
     test functions. Since these functions make the most sense in a browser,
     we normally invoke them from within a browser rather than with Mocha or something.
     The function <code class="language-js">testAllTriadBalance(WORLD_TRIANGLE_COORDS)</code>
