Just thanking Sean and Mark.

--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -485,6 +485,8 @@ that would have to be included to build an interactive diagram.
   <h2>License</h2>
   You are free to reuse this software under the terms
 of the GNU General Public License. Contact me (&lt;read.robert@gmail.com&gt;) with any questions or comments.
+	<h2> Acknowledgements</h2>
+	<p>Thanks to Mark Frazier for the concept and Sean Johnson for a proofread and code review.</p>
 </section>
 </div>
 
