--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -133,7 +133,19 @@ The closer to a corner of the triangle, the more strongly that
   attribute is attributed. The center of the triangle reflects all attributes equally — that is, "perfect balance."
   The weights of these attributes will be determined by your assertion, and displayed above the
 triangle.
-</p>
+  </p>
+  <h2>How to Use for Programmers
+</h2>
+  <p>
+  To use the Triad Balance Diagram, you need to include some common
+libraries and the files from this <a href="">repo</a> into an
+HTML page which has an svg element you designate for the diagram,
+and provide a callback which will return to you the "balance vector" whenever
+the user clicks. You can see that on this page, or you may prefer
+the somewhat simpler JSFiddle below.  The JSFiddle shows how to
+style the diagram (including colors, etc.) in .css.
+  </p>
+  <iframe width="100%" height="300" src="//jsfiddle.net/RobertLRead/o1vnfrh7/embedded/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
     <h2>Purpose</h2>
     <p>
     Clicking on the triangle gives you a two-dimensional specification. In some cases, that may be all you need.
@@ -500,7 +512,7 @@ Contact me (&lt;read.robert@gmail.com&gt;) with any questions or comments.    </
 </div>
 
 </div>
-
+  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
