improving the jsfiddle

--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -142,10 +142,10 @@ libraries and the files from this <a href="">repo</a> into an
 HTML page which has an svg element you designate for the diagram,
 and provide a callback which will return to you the "balance vector" whenever
 the user clicks. You can see that on this page, or you may prefer
-the somewhat simpler JSFiddle below.  The JSFiddle shows how to
+the somewhat simpler JSFiddle below.  The <a href="https://jsfiddle.net/RobertLRead/o1vnfrh7/">JSFiddle</a> shows how to
 style the diagram (including colors, etc.) in .css.
   </p>
-  <iframe width="100%" height="300" src="//jsfiddle.net/RobertLRead/o1vnfrh7/embedded/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
+<iframe width="100%" height="300" src="//jsfiddle.net/RobertLRead/o1vnfrh7/embedded/js,html,css,result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>  
     <h2>Purpose</h2>
     <p>
     Clicking on the triangle gives you a two-dimensional specification. In some cases, that may be all you need.
