updating the documentation

--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -118,7 +118,8 @@
     <p>
     This interactive page presents what may be a new graphical user interface element — the "triad-balance" diagram. The purpose is to use a
 single click on a triangle to enter three values such as "Mind/Body/Sprit" or "Strength/Endurance/Flexibility" that are presumed to in some sense
-be "in balance", or where it is interesting if they are in balance. 
+be "in balance", or where it is interesting if they are in balance.
+  The Triad Balance widget is fully responsive and stylable in css.
     </p>
     <p>
       This is an <a href="https://github.com/PubInv/TriadBalance">open source demonstration project</a> of <a href="https://pubinv.github.io/PubInv/">Public Invention</a>.
@@ -472,9 +473,9 @@ function vpw(w,x) { return (x); }
     <p>
   This project is contributing JavaScript and math which makes implementing a TriadBalance diagram easy for a JavaScript programmer.
   However, the 200 lines of code needed to implement the math could easily be translated to some other language.
-  Additional work would be needed to make a TriadBalance as easy to use by lightly skilled front-end programmers as, for example, a Bootstrap slider.
-  To make an easily reusable GUI component requires configuration and design skill. I would love to have somebody take this 
-code and make a <a href="https://d3js.org/"> d3</a> or <a href="https://reactjs.org/">React</a> component out of it, so that it could be enjoyed by others as a plug-in as easy using another d3 GUI element, for example.
+  As is, the code should be easy to include on any webpage.
+ I would love to have somebody take this 
+code even further make a <a href="https://d3js.org/"> d3</a> or <a href="https://reactjs.org/">React</a> component out of it, so that it could be enjoyed by others as a plug-in as easy using another d3 GUI element, for example.
 </p>
     <h4>How to Lighten the Footprint</h4>
     <p>
