--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -139,7 +139,7 @@ triangle.
 </h2>
   <p>
   To use the Triad Balance Diagram, you need to include some common
-libraries and the files from this <a href="">repo</a> into an
+libraries and the files from this <a href="https://github.com/PubInv/TriadBalance">repo</a> into an
 HTML page which has an svg element you designate for the diagram,
 and provide a callback which will return to you the "balance vector" whenever
 the user clicks. You can see that on this page, or you may prefer
