got rid of Vector2 usage

--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -516,6 +516,9 @@ executed on loading, the will print failed assertions on our browser console or 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
+<!-- This is experimental; this is my attempt to use vec-la-fp -->
+<script src="./js/vec.window.js"></script>
+
 <!-- This is brings in the math and the norm defintions we need -->
 <script src="./TriadBalanceMath.js"></script>
 
