some files moved

--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -532,15 +532,15 @@ executed on loading, the will print failed assertions on our browser console or 
 <script src="./js/vec.window.js"></script>
 
 <!-- This is brings in the math and the norm defintions we need -->
-  <script src="./TriadBalanceMath.js"></script>
+  <script src="./src/TriadBalanceMath.js"></script>
 
   <!-- Unit tests (executable in browser). If not testing, this is not needed.
   -->
-<script src="./TriadBalanceTest.js"></script>
+<script src="./test/TriadBalanceTest.js"></script>
 
 
 <!-- The main() for this page, and examples of using the element -->    
-<script src="./TriadBalanceDiagram.js"></script>
+<script src="./src/TriadBalanceDiagram.js"></script>
 
 <script>
 
