moving some files

--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -36,7 +36,7 @@
 
 
     <!-- Template of .css elements used to style the TriadBalance widget -->    
-    <link rel="stylesheet" type="text/css" href="./TriadBalance.css" />    
+    <link rel="stylesheet" type="text/css" href="./src/TriadBalance.css" />    
     
 
     <script src="https://code.jquery.com/jquery-1.12.1.js"></script>
