--- a/TriadBalanceDemo.html
+++ b/TriadBalanceDemo.html
@@ -653,6 +653,10 @@ function init() {
   let GLOBAL_SVG_ID = "create_svg";
   TBS = new triadb.TriadBalanceState();
   TBS.SVG_ELT = document.getElementById(GLOBAL_SVG_ID);
+  TBS.CLICK_CALLBACK = ((tp,tpi,bal) => setBalance(bal));
+  TBS.LABELS = THREE_DIMENSIONS[CUR_LABELS];
+
+  // These are optional configuraton settins, which have defaults.
   TBS.POINTS_UPWARD = true;
   TBS.FONT_SIZE_RATIO_TO_HEIGHT = 1/20;
   // These value look good to me but I am not a web designer.
@@ -660,9 +664,9 @@ function init() {
   TBS.SIDE_TO_MIN_BOUND = 7/10;
   // The percentage to push the origin down to make it look balanced.
   TBS.Y_DISP_PER_CENT = 10;
-  TBS.CLICK_CALLBACK = ((tp,tpi,bal) => setBalance(bal));
+
   TBS.NORM_TO_USE = (getRadioValue("norm") == 0 ? triadb.L1 : triadb.L2);
-  TBS.LABELS = THREE_DIMENSIONS[CUR_LABELS];
+
 
   triadb.initialize_triad_diagram(TBS);
 }
